# textanonymize

./: README.md  pyproject.toml
tests/: test_textanonymize.py
textanonymize/: __init__.py  entity.py  provider.py
textanonymize/lang/all/: __init__.py  collection.py
textanonymize/lang/fr/: __init__.py  collection.py
textanonymize/lang/fr/resources/: patronymes.txt  prenoms.csv
