[tool.poetry]
name = "textanonymize"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
phonenumbers = "^8.12.37"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = {version = "^21.11b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
